Fixed spent/totes spacing

--- a/web/less/budget-allocator.less
+++ b/web/less/budget-allocator.less
@@ -316,13 +316,11 @@
         }
 
         .spent {
-            position: absolute;
+            float: right;
             text-align: left;
             font-size: .85em;
             font-weight: bold;
             text-transform: uppercase;
-            left: 61%;
-            bottom: 14px;
         }
     }
 
