--- a/web/less/responsive.less
+++ b/web/less/responsive.less
@@ -53,9 +53,9 @@
             }
 
             #budget-allocator {
-                #budget-overview .top .spent {
-                    left: 68%;
-                    }
+                // #budget-overview .top .spent {
+                //     left: 63%;
+                //     }
                 .categories {
                     margin-bottom: 16px;
                 }
